--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -43,7 +43,7 @@
 
 
 
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
 
                 android:id="@+id/item_image"
                 android:layout_width="wrap_content"
